--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,23 @@
 <resources>
+
+    <string-array name="spinner">
+
+        <item>Jan</item>
+        <item>feb</item>
+        <item>Mar</item>
+        <item>April</item>
+        <item>May</item>
+        <item>Jun</item>
+        <item>July</item>
+        <item>Aug</item>
+        <item>sep</item>
+        <item>oct</item>
+        <item>Nov</item>
+        <item>dec</item>
+    </string-array>
+
+
+
     <string name="app_name">Expense Manager</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -12,3 +31,4 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
+
