updated :removed fragment and added some code in main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <string-array name="spinner">
 
+        <item>month</item>
         <item>Jan</item>
         <item>feb</item>
         <item>Mar</item>
