--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     </string-array>
 
 
-    <string name="app_name">Expense Manager</string>
+    <string name="app_name">Spese</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_userdata">Userdata</string>
